# lanczos

./: .gitignore  CMakeLists.txt  README.md  plot.py
bench/: bench.c  bench.cu  bench.h  cuda-knl-bench.cu  nomp-knl-bench.c  ocl-knl-bench.c  transforms.py
data/sparse-matrices/: small-test.mtx
src/: kernels-cuda.cu  kernels-nomp.c  kernels-ocl.c  kernels-serial.c  kernels-sycl.cpp  kernels.cl  kernels.h  lanczos-aux.c  lanczos-aux.h  lanczos-cuda.cu  lanczos-knl-bench.c  lanczos-nomp.c  lanczos-ocl.c  lanczos-serial.c  lanczos-sycl.cpp  lanczos.c  lanczos.h  main.c  matrix-util.c  matrix-util.h  mtx.c  mtx.h  print-helper.c  print-helper.h  serial.py  transforms.py
src/sycl/: lanczos-sycl.cpp  lanczos.h  main.cpp
